--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>AiTicTacToe</title>
+  <title>Tic Tac Toe</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1">
+  <link rel="icon"
+    type="image/x-icon"
+    href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/e5fc1fcbd2.js"
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
